--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         </activity>
 
         <service
-            android:name=".services.IMEService"
+            android:name=".core.services.IMEService"
             android:label="@string/app_name"
 
             android:permission="android.permission.BIND_INPUT_METHOD"
