--- a/gradle.properties
+++ b/gradle.properties
@@ -25,3 +25,4 @@ android.enableJetifier=false
 org.gradle.configuration-cache=true
 # Use this flag carefully, in case some of the plugins are not fully compatible.
 org.gradle.configuration-cache.problems=warn
+android.enableR8.fullMode=true
