--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
 <!--        Spelling Check Service-->
 
         <service
-            android:name=".core.services.IMEService"
+            android:name=".services.IMEService"
             android:label="@string/app_name"
             android:permission="android.permission.BIND_INPUT_METHOD"
             android:exported="false">
